tests/paczka1/fuzzy1/49110758.err
Error in line 1: FPOpm A272 9,0
Error in line 9: ?'mpGB
Error in line 7: FPOpm S454 86,9
Error in line 21: 0mpGB A848 51,3
Error in line 25: FPOpm S454 14,O
Error in line 22: dD8IEx A848 3,2
Error in line 33: QnLu2Gg A129 318,1
